cluster/manifests/k6-operator/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k6-operator
  labels:
    name: k6-operator
    pod-security.kubernetes.io/enforce: restricted
